crates/tokmd-analysis-format/tests/snapshots/snapshot_w74__w74_analysis_jsonld_with_derived.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_w74.rs
expression: out
---
{
  "@context": "https://schema.org",
  "@type": "SoftwareSourceCode",
  "codeLines": 2400,
  "commentCount": 310,
  "fileSize": 72000,
  "interactionStatistic": {
    "@type": "InteractionCounter",
    "interactionType": "http://schema.org/ReadAction",
    "userInteractionCount": 19200
  },
  "lineCount": 2870,
  "name": "."
}
