crates/tokmd-analysis-format/tests/snapshots/snapshot_w74__w74_analysis_md_archetype_topics.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_w74.rs
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Archetype

- Kind: `web-app`
- Evidence: `package.json`, `src/index.tsx`

## Topics

- Overall: `frontend, rendering`
