crates/tokmd-analysis-format/tests/snapshots/snapshot_w74__w74_analysis_md_minimal.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_w74.rs
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
